...
              Center(
                child: Column(
                  mainAxisAlignment: MainAxisAlignment.center,
                  children: [
                    _buildMenuButton(
                      context,
                      key: const Key('button_add_mood'),
                      title: 'cek mood kamu hari ini',
                      page: const MoodTrackerPage(),
                    ),
                    const SizedBox(height: 20),
                    _buildMenuButton(
                      context,
...
                      page: const EmoticonListPage(),
                    ),
                    if (getFeatureToggle()) ...[
                      const SizedBox(height: 20),
                      _buildMenuButton(
                        context,
                        key: const Key('button_mood_journal'),
                        title: 'Mood Journal',
                        page: const MoodJournalPage(),
                      ),
                    ],
                  ],
                ),
...
