...
                    });
                  },
                  itemCount: moods.length,
                  itemBuilder: (context, index) {
                    Key? moodKey;
                    if (moods[index].contains('happy.png')) {
                      moodKey = const Key('mood_happy');
                    }
                    return GestureDetector(
                      key: moodKey,
                      onTapDown: (details) {},
                      child: Opacity(
                        opacity: selectedMoodIndex == index ? 1.0 : 0.4,
...
                    mainAxisAlignment: MainAxisAlignment.center,
                    children: [
                      _cuteButton(
                        text: 'Simpan',
                        color: Colors.deepPurpleAccent,
                        onPressed: _saveMood,
                        key: const Key('button_save_mood'),
                      ),
                      const SizedBox(width: 20),
                      _cuteButton(
                        text: 'Hapus',
                        color: Colors.pinkAccent,
                        onPressed: _removeMood,
...
