...
    }
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: const Key('mood_detail_page'),  // Tambahan key di sini saja
      body: Container(
        decoration: const BoxDecoration(
          gradient: LinearGradient(
            colors: [Color(0xFFFDEBF7), Color(0xFFB7E9F7)],
            begin: Alignment.topLeft,
            end: Alignment.bottomRight,
...
