...
                              return const Icon(Icons.error);
                            },
                          ),
                          const SizedBox(height: 20),
                        ],
                        TextField(
                          key: const Key('edit_text_journal'), // Key untuk input jurnal
                          controller: _controller,
                          maxLines: null,
                          style: GoogleFonts.quicksand(fontSize: 16),
                          decoration: const InputDecoration.collapsed(
                            hintText: 'Tulis perasaan atau kejadian hari ini...',
                          ),
...
